--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-gap: 24px;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  max-width: 1440px;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+  grid-column: span 3;
+  text-align: center;
+  align-self: start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input {
+  grid-column: span 3;
+  display: flex;
+  align-self: start;
+  justify-content: space-evenly;
+}
+
+.package-list{
+  grid-column: span 1;
+  align-self: start;
+}
+
+.scrollable{
+  height: 80vh;
+  overflow-y: auto;
+}
+
+.package-list-container :hover{
+  background-color: #000000;
+  color: #bbbbbb; 
+}
+
+.active{
+  background-color: hotpink;
+}
+
+.package-info{
+  grid-column: span 2;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  align-self: start;
+}
+
+@media only screen and (max-width: 600px) {
+  .package-list {
+    grid-column: span 3;
   }
-  to {
-    transform: rotate(360deg);
+
+  .package-info {
+    grid-column: span 3;
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
+  .scrollable{
+    height: 40vh;
+    overflow-y: auto;
   }
 }
